--- a/index.html
+++ b/index.html
@@ -4,43 +4,45 @@
   <meta charset="UTF-8">
   <title>16-bit Day Clock</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+  * {
+    box-sizing: border-box;
+  }
 
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      background: #222;
-      color: #fff;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+  body {
+    font-family: sans-serif;
+    margin: 0;
+    background: #222;
+    color: #fff;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    #tileClock {
-      display: grid;
-      grid-template-columns: repeat(4, 80px);
-      grid-template-rows: repeat(4, 80px);
-      gap: 8px;
-    }
+  #tileClock {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 4px;
+    width: 100vmin;
+    height: 100vmin;
+  }
 
-    .tile {
-      width: 80px;
-      height: 80px;
-      border: 1px solid #444;
-      transition: background 0.3s;
-    }
+  .tile {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #444;
+    transition: background 0.3s;
+  }
 
-    .tile.on {
-      background-color: #fff;
-    }
+  .tile.on {
+    background-color: #fff;
+  }
 
-    .tile.off {
-      background-color: #222;
-    }
-  </style>
+  .tile.off {
+    background-color: #222;
+  }
+</style>
 </head>
 <body>
   <div id="tileClock">
