--- a/index.html
+++ b/index.html
@@ -2,57 +2,106 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>16-bit Day Clock</title>
+  <title>16-bit Day Clock + Fractional Time</title>
   <style>
-  * {
-    box-sizing: border-box;
-  }
+    * {
+      box-sizing: border-box;
+    }
 
-  body {
-    font-family: sans-serif;
-    margin: 0;
-    background: #222;
-    color: #fff;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transition: background 0.3s, color 0.3s;
+    }
 
-  #tileClock {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 4px;
-    width: 100vmin;
-    height: 100vmin;
-  }
+    body.dark {
+      background: #222;
+      color: #0f0;
+    }
 
-  .tile {
-    width: 100%;
-    height: 100%;
-    border: 1px solid #444;
-    transition: background 0.3s;
-  }
+    body.light {
+      background: #fefefe;
+      color: #222;
+    }
 
-  .tile.on {
-    background-color: #fff;
-  }
+    #tileClock {
+      display: grid;
+      grid-template-columns: repeat(4, 80px);
+      grid-template-rows: repeat(4, 80px);
+      gap: 8px;
+      margin-bottom: 40px;
+    }
 
-  .tile.off {
-    background-color: #333;
-  }
-</style>
+    .tile {
+      width: 80px;
+      height: 80px;
+      border: 1px solid #444;
+      transition: background 0.3s;
+    }
+
+    .tile.on {
+      background-color: #0f0;
+    }
+
+    .tile.off {
+      background-color: #333;
+    }
+
+    body.light .tile.on {
+      background-color: #000;
+    }
+
+    body.light .tile.off {
+      background-color: #fff;
+    }
+
+    #fractionTime {
+      font-size: 48px;
+      margin-top: 0;
+    }
+
+    #themeToggle {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      padding: 0.5em 1em;
+      font-size: 1em;
+      cursor: pointer;
+      border: none;
+      border-radius: 5px;
+      transition: background 0.2s, color 0.2s;
+    }
+
+    body.dark #themeToggle {
+      background-color: #444;
+      color: #ccc;
+    }
+
+    body.light #themeToggle {
+      background-color: #ddd;
+      color: #000;
+    }
+
+    #themeToggle:hover {
+      opacity: 0.8;
+    }
+  </style>
 </head>
-<body>
-  <div id="tileClock">
-    <!-- 16 tiles will be inserted here -->
-  </div>
+<body class="dark">
+  <div id="tileClock"></div>
+  <div id="fractionTime">--.--</div>
+  <button id="themeToggle">ライトテーマに切り替え</button>
 
   <script>
     const tileClock = document.getElementById("tileClock");
+    const fractionTime = document.getElementById("fractionTime");
 
-    // 初期化：16個のタイル
+    // タイル初期化
     for (let i = 0; i < 16; i++) {
       const tile = document.createElement("div");
       tile.classList.add("tile", "off");
@@ -69,6 +118,7 @@
         now.getSeconds() +
         now.getMilliseconds() / 1000;
 
+      // タイル更新（16bit）
       const fractionIndex = Math.floor((secondsSinceMidnight / 86400) * 65536);
       const binary = fractionIndex.toString(2).padStart(16, "0");
 
@@ -76,10 +126,26 @@
         tile.classList.toggle("on", binary[i] === "1");
         tile.classList.toggle("off", binary[i] === "0");
       });
+
+      // 小数表記更新（0.00〜100.00）
+      const fraction = secondsSinceMidnight / 86.4;
+      fractionTime.textContent = fraction.toFixed(2);
     }
 
     setInterval(updateClock, 100);
     updateClock();
+
+    const body = document.body;
+    const toggleButton = document.getElementById("themeToggle");
+
+    toggleButton.addEventListener("click", () => {
+      const isDark = body.classList.contains("dark");
+      body.classList.toggle("dark", !isDark);
+      body.classList.toggle("light", isDark);
+      toggleButton.textContent = isDark
+        ? "ダークテーマに切り替え"
+        : "ライトテーマに切り替え";
+    });
   </script>
 </body>
 </html>
