--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       box-sizing: border-box;
     }
 
-    body {
-      font-family: sans-serif;
+    html, body {
       margin: 0;
-      height: 100vh;
-      display: flex;
-      flex-direction: row;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      font-family: sans-serif;
       transition: background 0.3s, color 0.3s;
     }
 
@@ -27,26 +27,34 @@
       color: #222;
     }
 
+    #container {
+      display: flex;
+      height: 100vh;
+      width: 100vw;
+    }
+
     #leftPanel {
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex: 0 0 auto;
-      padding: 20px;
+      padding: 2vmin;
     }
 
     #tileClock {
       display: grid;
-      grid-template-columns: repeat(4, 80px);
-      grid-template-rows: repeat(4, 80px);
-      gap: 8px;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      gap: 2vmin;
+      width: 100%;
+      height: 100%;
     }
 
     .tile {
-      width: 80px;
-      height: 80px;
-      border: 1px solid #444;
+      width: 100%;
+      height: 100%;
       transition: background 0.3s;
+      border: none;
     }
 
     .tile.on {
@@ -71,16 +79,16 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 20px;
+      padding: 2vmin;
     }
 
     #fractionTime {
-      font-size: 80px;
-      margin-bottom: 40px;
+      font-size: 10vw;
+      margin-bottom: 5vh;
     }
 
     #themeToggle {
-      padding: 0.7em 1.5em;
+      padding: 1em 2em;
       font-size: 1em;
       cursor: pointer;
       border: none;
@@ -104,13 +112,14 @@
   </style>
 </head>
 <body class="dark">
-  <div id="leftPanel">
-    <div id="tileClock"></div>
-  </div>
-
-  <div id="rightPanel">
-    <div id="fractionTime">--.--</div>
-    <button id="themeToggle">ライトテーマに切り替え</button>
+  <div id="container">
+    <div id="leftPanel">
+      <div id="tileClock"></div>
+    </div>
+    <div id="rightPanel">
+      <div id="fractionTime">--.--</div>
+      <button id="themeToggle">ライトテーマに切り替え</button>
+    </div>
   </div>
 
   <script>
@@ -134,7 +143,6 @@
         now.getSeconds() +
         now.getMilliseconds() / 1000;
 
-      // タイル更新（16bit）
       const fractionIndex = Math.floor((secondsSinceMidnight / 86400) * 65536);
       const binary = fractionIndex.toString(2).padStart(16, "0");
 
@@ -143,7 +151,6 @@
         tile.classList.toggle("off", binary[i] === "0");
       });
 
-      // 小数表記更新（0.00〜100.00）
       const fraction = secondsSinceMidnight / 86.4;
       fractionTime.textContent = fraction.toFixed(2);
     }
