--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
       grid-template-rows: repeat(4, 1fr);
       gap: 2vmin;
       width: 100%;
-      height: 100%;
+      aspect-ratio: 1 / 1;  /* ✅ タイル全体を正方形に保つ */
+      max-height: 100%;
     }
+
 
     .tile {
       width: 100%;
