--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
     #tileClock {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-      gap: 2vmin;
+      grid-template-columns: repeat(4, 80px); /* 各タイルの幅 */
+      grid-template-rows: repeat(4, 80px);    /* 各タイルの高さ */
+      gap: 1vmin;  /* タイル間のスペースを小さく */
       width: 100%;
-      aspect-ratio: 1 / 1; /* タイル全体を正方形に保つ */
+      aspect-ratio: 1 / 1;
       max-height: 100%;
     }
 
@@ -84,7 +84,7 @@
     }
 
     #fractionTime {
-      font-size: 6vw;
+      font-size: 10vw; /* フォントサイズを大きく */
       margin-top: 2vh;
     }
 
