--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     #leftPanel {
       flex: 3;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      justify-content: center; /* 横方向中央 */
+      align-items: center;     /* 縦方向中央 */
       padding: 2vmin;
     }
 
@@ -52,9 +52,9 @@
 
     #tileClock {
       display: grid;
-      grid-template-columns: repeat(4, 80px); /* 各タイルの幅 */
-      grid-template-rows: repeat(4, 80px);    /* 各タイルの高さ */
-      gap: 1vmin;  /* タイル間のスペースを小さく */
+      grid-template-columns: repeat(4, 80px);
+      grid-template-rows: repeat(4, 80px);
+      gap: 1vmin;
       width: 100%;
       aspect-ratio: 1 / 1;
       max-height: 100%;
@@ -84,7 +84,7 @@
     }
 
     #fractionTime {
-      font-size: 10vw; /* フォントサイズを大きく */
+      font-size: 10vw;
       margin-top: 2vh;
     }
 
