--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
       width: 100vw;
     }
 
-    /* タイル部分のスタイル */
+    /* 左側：タイル部分 */
     #leftPanel {
-      flex: 4;               /* タイル部分を大きく */
+      flex: 4;
       display: flex;
-      justify-content: center; /* 横方向中央 */
-      align-items: center;     /* 縦方向中央 */
+      justify-content: center;
+      align-items: center;
       padding: 2vmin;
     }
 
-    /* 時計部分のスタイル */
+    /* 右側：時計部分 */
     #rightPanel {
-      flex: 2;               /* 時計部分を少し小さく */
+      flex: 2;
       display: flex;
-      justify-content: center; /* 横方向中央 */
-      align-items: center;     /* 縦方向中央 */
+      justify-content: center;
+      align-items: center;
       padding: 2vmin;
     }
 
@@ -57,9 +57,9 @@
       grid-template-rows: repeat(4, 80px);
       gap: 1vmin;
       width: 100%;
-      aspect-ratio: 1 / 1;
-      max-height: 100%;
+      height: 100%;
       justify-items: center; /* タイルを中央に配置 */
+      align-items: center;   /* タイルを中央に配置 */
     }
 
     .tile {
